--- a/src/main/webapp/assets/css/app-bs-theme.css
+++ b/src/main/webapp/assets/css/app-bs-theme.css
@@ -213,3 +213,28 @@ a.list-group-item:hover, a.list-group-item:focus {
     font-weight: normal;
 }
 
+ul {
+  list-style-type: none;
+  padding-left: 0px;
+}
+
+.restaurant {
+  position: relative;
+  /*border-radius: 25px;*/
+  /*border: 2px solid black;*/
+  /*border-radius: 30px;*/
+  /*-moz-border-radius: 30px;*/
+  /*-khtml-border-radius: 30px;*/
+  /*-webkit-border-radius: 30px;*/
+}
+
+.restaurant-picture {
+  position: absolute;
+  z-index: -1;
+}
+
+.restaurant-name > span {
+  padding-left: 5px;
+  padding-top: 5px;
+}
+
