--- a/html/stylesheets/app-bs-theme.css
+++ b/html/stylesheets/app-bs-theme.css
@@ -223,29 +223,54 @@ ul {
   padding-left: 0px;
 }
 
-.rounded-image {
-  margin: 0px 0px 0px 0px;
-  padding: 0px 0px 0px 0px;
-  border-radius:6px;
-  -moz-border-radius:6px;
-  -webkit-border-radius:6px;
-}
-
-.restaurant-picture {
-  position: absolute;
-  z-index: -1;
-}
-
 .restaurant-name > span {
   padding-left: 5px;
   padding-top: 5px;
 }
 
 .restaurant > div {
-  font-family: axis;
+  border-color: gray;
   padding-bottom: 20px;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  border-radius: 6px;
+  border: 1px solid;
+  -moz-border-radius:6px;
+  -webkit-border-radius:6px;
 }
 
-.restaurant-info > li {
+.restaurant {
+  margin-bottom: 10px;
+}
+
+.restaurant-info > div > li {
   display: inline-block;
 }
+
+.restaurant-info {
+  margin-left: 5px;
+}
+
+.nearby-restaurant > li {
+  display: inline-block;
+  border-color: gray;
+  padding-bottom: 20px;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  border-radius: 6px;
+  border: 1px solid;
+  -moz-border-radius:6px;
+  -webkit-border-radius:6px;
+}
+
+.image-container {
+  height: 100px;
+  width: 100px;
+}
+
+.image-container > img {
+  width: 100%;
+  height: 100%;
+}
+
+
