--- a/html/stylesheets/app-bs-theme.css
+++ b/html/stylesheets/app-bs-theme.css
@@ -74,8 +74,8 @@ li.middle {
   margin-bottom: 5px;
 }
 
-#icon {
-  position: absolute;
-  right: 10px;
-  bottom: 5px;
+.align-vertical {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
