--- a/html/stylesheets/subway.css
+++ b/html/stylesheets/subway.css
@@ -1,5 +1,23 @@
+html,
+body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
+
 #barcode {
   margin-top: -10px;
+}
+
+#store-page {
+  min-height:100%;
+  position:relative;
+
+  background-color: #F2F2F4;
+}
+
+#user-transaction {
+  padding-bottom:25px;
 }
 
 #scan-result span, #win-results {
@@ -11,7 +29,8 @@
 }
 
 #scan-result {
-  margin: 17px 0 0 20px;
+  padding: 17px 0 17px 20px;
+  background-color: #ffffff;
 }
 
 #win-results {
@@ -55,10 +74,7 @@
 }
 
 #share-social {
-  background-color: #F2F2F4;
-
-  padding: 33px 0;
-  margin-top: 20px;
+  padding: 33px 0 0;
 }
 
 #share-social .social-network {
@@ -83,10 +99,32 @@
   display: inline-block;
 }
 
-
 .fa-facebook-square, .fa-twitter { 
   color: #BCBCBC;
   margin-right: 13px;
 
   vertical-align: middle;
+}
+
+.arrow-up {
+  margin: -11px auto 0;
+
+	width: 0; 
+	height: 0; 
+	border-left: 18px solid transparent;
+	border-right: 18px solid transparent;
+	border-bottom: 9px solid #F2623F;
+
+}
+
+#more-information {
+  background-color: #F2623F;
+  color: #ffffff;
+  text-align: center;
+  padding: 2px 0;
+
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:25px;   /* Height of the footer */
 }
