--- a/html/stylesheets/subway.css
+++ b/html/stylesheets/subway.css
@@ -1,12 +1,14 @@
 html,
 body {
    margin:0;
-   padding:0;
+   padding:0 !important;
    height:100%;
 }
 
 #barcode {
-  margin-top: -10px;
+  padding-top: 50px;
+  text-align: center;
+  background: #ffffff;
 }
 
 #store-page {
@@ -74,7 +76,7 @@ body {
 }
 
 #share-social {
-  padding: 33px 0 0;
+  padding: 33px 0 20px;
 }
 
 #share-social .social-network {
