--- a/html/stylesheets/subway.css
+++ b/html/stylesheets/subway.css
@@ -128,5 +128,12 @@ body {
   position:absolute;
   bottom:0;
   width:100%;
-  height:25px;   /* Height of the footer */
+}
+
+#more-information.closed {
+  height: 25px;
+}
+
+#more-information {
+  height: 88%;
 }
