added log in page

--- a/html/stylesheets/login.css
+++ b/html/stylesheets/login.css
@@ -24,9 +24,16 @@
   color: white;
 }
 
-#contact {
+#signup-link {
   color: #FF6138;
   display: block;
-  padding-top: 60px;
+  padding-top: 30px;
+  text-align: center;
+}
+
+#skip {
+  color: #FF6138;
+  display: block;
+  padding-top: 30px;
   text-align: center;
 }
