--- a/html/stylesheets/subway.css
+++ b/html/stylesheets/subway.css
@@ -142,6 +142,38 @@ body {
   width: 100%;
 }
 
-#more-information.closed #restaurant-header {
+#more-information.closed #restaurant-header, #more-information.closed #redeem-details, #more-information.closed #restaurant-map {
   display: none;
+}
+
+#redeem-details {
+  background-color: #F2F2F4;
+  margin-top: -32px;
+  color: #000000;
+  font-size: 11px;
+  padding: 45px 20px 15px;
+}
+
+#restaurant-map {
+  width: 100%;
+}
+
+#restaurant-address {
+  color: #000000;
+  text-align: left;
+  
+  padding: 7px 0 7px 30px;
+  float: left;
+
+  display: inline-block;
+}
+
+#more-information .fa-angle-right {
+  font-size: 1.8em;
+  color: #000000;
+
+  display: inline-block;
+  float: right;
+
+  padding: 3px 12px 7px 0;
 }
