more detail drawer work

--- a/html/stylesheets/subway.css
+++ b/html/stylesheets/subway.css
@@ -5,6 +5,11 @@ body {
    height:100%;
 }
 
+#header.closed {
+  display: none;
+}
+
+
 #barcode {
   padding-top: 50px;
   text-align: center;
@@ -132,10 +137,11 @@ body {
 
 #more-information.closed {
   height: 25px;
+  background-color: #F2623F;
 }
 
 #more-information {
-  height: 88%;
+  height: 100%;
 }
 
 #restaurant-header {
@@ -163,9 +169,8 @@ body {
   text-align: left;
   
   padding: 7px 0 7px 30px;
-  float: left;
 
-  display: inline-block;
+  background-color: #ffffff;
 }
 
 #more-information .fa-angle-right {
@@ -175,5 +180,6 @@ body {
   display: inline-block;
   float: right;
 
-  padding: 3px 12px 7px 0;
+  padding-right: 12px;
+  margin-top: -3px;
 }
