--- a/html/stylesheets/app-bs-theme.css
+++ b/html/stylesheets/app-bs-theme.css
@@ -8,7 +8,15 @@ ul {
   padding-top: 5px;
 }
 
-.restaurant > div {
+.restaurant > a {
+  color: #000000;
+}
+
+.restaurant > a:hover {
+  color: #000000;
+}
+
+.restaurant > a > div, .restaurant > div {
   padding-bottom: 20px;
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 0px;
