--- a/html/stylesheets/subway.css
+++ b/html/stylesheets/subway.css
@@ -24,7 +24,7 @@ body {
 }
 
 #user-transaction {
-  padding-bottom:25px;
+  padding-bottom:40px;
 }
 
 #scan-result span, #win-results {
@@ -114,14 +114,13 @@ body {
 }
 
 .arrow-up {
-  margin: -11px auto 0;
+  margin: -19px auto 8px;
 
 	width: 0; 
 	height: 0; 
 	border-left: 18px solid transparent;
 	border-right: 18px solid transparent;
 	border-bottom: 9px solid #F2623F;
-
 }
 
 #more-information {
@@ -133,10 +132,12 @@ body {
   position:absolute;
   bottom:0;
   width:100%;
+
+  padding-top: 10px;
 }
 
 #more-information.closed {
-  height: 25px;
+  height: 40px;
   background-color: #F2623F;
 }
 
